...
    super.initState();
    selectedHospital =
        hospitals[hospitals.indexWhere((element) => element.id == 'H001')];
    findHospitals = hospitals;
    Timer.periodic(const Duration(seconds: 2), (Timer timer) async {
...
                            child: Column(children: <Widget>[
                              TextFormField(
                                key: ValueKey('hospitalIDField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                              const SizedBox(height: 20.0),
                              TextFormField(
                                key: ValueKey('hospitalNameField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                              const SizedBox(height: 20.0),
                              TextFormField(
                                key: ValueKey('hospitalContactField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                              const SizedBox(height: 20.0),
                              TextFormField(
                                key: ValueKey('hospitalLattField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                              const SizedBox(height: 20.0),
                              TextFormField(
                                key: ValueKey('hospitalLongField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                                    const EdgeInsets.symmetric(vertical: 16.0),
                                child: ElevatedButton(
                                  key: ValueKey('addHospitalBtn'),
                                  style: ElevatedButton.styleFrom(
                                      backgroundColor: const Color.fromARGB(
...
                                                  'New Hospital Added',
                                                  key: ValueKey(
                                                      'newHospitalPopup')),
                                              content: Text(
                                                  'Succeccfully added ${hospitalIDController.text}-${hospitalNameController.text} to the System'),
...
                                                TextButton(
                                                  key: ValueKey(
                                                      'hospitaladdedOK'),
                                                  onPressed: () {
                                                    hospitalIDController
...
                            child: Column(children: <Widget>[
                              TextFormField(
                                key: ValueKey('hospitalRemoveField'),
                                validator: (value) {
                                  if (value == null || value.isEmpty) {
...
                                    const EdgeInsets.symmetric(vertical: 16.0),
                                child: ElevatedButton(
                                  key: ValueKey('hospitalRemoveBtn'),
                                  style: ElevatedButton.styleFrom(
                                    backgroundColor: const Color.fromARGB(
...
                                                  'Are you sure you want to remove ${removeHospitalIDController.text} from the System',
                                                  key: ValueKey(
                                                      'hospitalRemovingConf')),
                                              actions: <Widget>[
                                                TextButton(
                                                  key:
                                                      ValueKey('hRemoveCancel'),
                                                  onPressed: () {
                                                    Navigator.pop(
...
                                                ),
                                                TextButton(
                                                  key: ValueKey('hRemoveOK'),
                                                  onPressed: () async {
                                                    Navigator.pop(
...
                              child: Column(children: <Widget>[
                                TextFormField(
                                  key: ValueKey('userIDField'),
                                  validator: (value) {
                                    if (value == null || value.isEmpty) {
...
                                const SizedBox(height: 30.0),
                                TextFormField(
                                  key: ValueKey('userPasswordField'),
                                  validator: (value) {
                                    if (value == null || value.isEmpty) {
...
                                      vertical: 16.0),
                                  child: ElevatedButton(
                                    key: ValueKey('userAddingBtn'),
                                    style: ElevatedButton.styleFrom(
                                        backgroundColor: Colors.green),
...
                                                title: const Text(
                                                  'New User Added',
                                                  key: ValueKey('newUserPopup'),
                                                ),
                                                content: Text(
...
                                                  TextButton(
                                                    key:
                                                        ValueKey('UseraddedOK'),
                                                    onPressed: () {
                                                      userIDController.clear();
...
                              child: Column(children: <Widget>[
                                TextFormField(
                                  key: ValueKey('userRemoveField'),
                                  validator: (value) {
                                    if (value == null || value.isEmpty) {
...
                                      vertical: 16.0),
                                  child: ElevatedButton(
                                    key: ValueKey('userRemoveBtn'),
                                    style: ElevatedButton.styleFrom(
                                      backgroundColor: const Color.fromARGB(
...
                                                  'Are you sure you want to remove ${removeUserIDController.text} from the System',
                                                  key: ValueKey(
                                                      'userRemovingConf'),
                                                ),
                                                actions: <Widget>[
                                                  TextButton(
                                                    key: ValueKey(
                                                        'uRemoveCancel'),
                                                    onPressed: () {
                                                      Navigator.pop(
...
                                                  ),
                                                  TextButton(
                                                    key: ValueKey('uRemoveOK'),
                                                    onPressed: () async {
                                                      Navigator.pop(
...
