...
                      ),
                      Center(
                        child: Form(
                          key: _formKey1,
                          child: Column(children: <Widget>[
                            TextFormField(
                              key: ValueKey('userFinder'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
                                  return 'Please enter Hospital ID';
                                }
                                return null;
                              },
...
                                  contentPadding: EdgeInsets.symmetric(
                                      vertical: 10, horizontal: 10)),
                              style: const TextStyle(fontSize: 20),
                            ),
                            const SizedBox(height: 30.0),
                            TextFormField(
                              key: ValueKey('passwordFinder'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
                                  return 'Please enter Password';
                                }
                                return null;
                              },
...
                            ),
                            const SizedBox(height: 20.0),
                            Padding(
                              padding:
                                  const EdgeInsets.symmetric(vertical: 16.0),
                              child: ElevatedButton(
                                key: ValueKey('loginBtnFinder'),
                                onPressed: () async {
                                  if (_formKey1.currentState!.validate()) {
                                    String response = await httpLoader.httpGET(
                                        hospitalIDController.text,
                                        passwordController.text);
                                    List<Hospital> hospitals =
...
                                      showDialog(
                                          context: context,
                                          builder: (BuildContext context) {
                                            return AlertDialog(
                                              title: const Text('Invalid Login',
                                                  key: ValueKey(
                                                      'wrongLoginText')),
                                              content: response == '"False"'
                                                  ? const Text(
                                                      'Incorrect Password')
                                                  : const Text(
                                                      'Invalid User ID'),
                                              actions: <Widget>[
                                                TextButton(
                                                  key: ValueKey('OKBtn'),
                                                  onPressed: () {
                                                    Navigator.pop(
                                                        context, 'OK');
                                                    hospitalIDController
                                                        .clear();
                                                    passwordController.clear();
...
              child: Row(
                children: [
                  Expanded(child: SizedBox()),
                  SizedBox(
                    width: 110,
                    child: ElevatedButton(
                      key: ValueKey('AdminBtn'),
                      style: ElevatedButton.styleFrom(
                        backgroundColor: Colors.white,
                      ),
                      onPressed: () {
                        showDialog(
                            context: context,
...
                                          // height: 355,
                                          child: Center(
                                            child: Form(
                                              key: _formKey2,
                                              child: Column(children: <Widget>[
                                                TextFormField(
                                                  key: ValueKey('adminID'),
                                                  validator: (value) {
                                                    if (value == null ||
                                                        value.isEmpty) {
                                                      return 'Please enter Admin ID';
                                                    }
                                                    return null;
...
                                                                          10)),
                                                  style: const TextStyle(
                                                      fontSize: 20),
                                                ),
                                                const SizedBox(height: 30.0),
                                                TextFormField(
                                                  key: ValueKey('adminPwd'),
                                                  validator: (value) {
                                                    if (value == null ||
                                                        value.isEmpty) {
                                                      return 'Please enter Password';
                                                    }
                                                    return null;
...
                                                Padding(
                                                  padding: const EdgeInsets
                                                          .symmetric(
                                                      vertical: 16.0),
                                                  child: ElevatedButton(
                                                    key: ValueKey(
                                                        'adminLoginBtn'),
                                                    onPressed: () async {
                                                      if (_formKey2
                                                          .currentState!
                                                          .validate()) {
                                                        String response =
                                                            await httpLoader.httpGET(
...
