...
          Row(
            children: [
              const Expanded(child: SizedBox()),
              SizedBox(
                width: 110,
                child: ElevatedButton(
                  key: ValueKey('connectBtn'),
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.green,
                  ),
                  onPressed: () async {
                    if (!isConnected) {
                      await mqttConnection.mqttConnect(hospitalID);
...
              const SizedBox(
                width: 20,
              ),
              SizedBox(
                width: 110,
                child: ElevatedButton(
                  key: ValueKey('disconnectBtn'),
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.red,
                  ),
                  onPressed: () {
                    if (isConnected) {
                      setState(() {
...
              const SizedBox(
                width: 20,
              ),
              SizedBox(
                width: 110,
                child: ElevatedButton(
                  key: ValueKey('logoutFinder'),
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.blue,
                  ),
                  onPressed: () {
                    showDialog(
                        context: context,
                        builder: (BuildContext context) {
                          return AlertDialog(
                            title: const Text('LogOut'),
                            content: const Text(
                                'Are you sure you want to logout ?',
                                key: ValueKey('logoutConfirmationFinder')),
                            actions: <Widget>[
                              TextButton(
                                onPressed: () =>
                                    Navigator.pop(context, 'Cancel'),
                                child: const Text('Cancel'),
                              ),
                              TextButton(
                                key: ValueKey('logoutOKBtn'),
                                onPressed: () {
                                  mqttConnection.disconnect();
                                  // dispose();
                                  deactivate();
                                  Navigator.pushReplacement(
                                      context,
...
                                                          builder: (BuildContext
                                                              context) {
                                                            return AlertDialog(
                                                              title: const Text(
                                                                'Invalid Login',
                                                                key: ValueKey(
                                                                    'loginErr'),
                                                              ),
                                                              content: response ==
                                                                      '"False"'
                                                                  ? const Text(
                                                                      'Incorrect Password')
                                                                  : const Text(
...
              borderRadius: BorderRadius.all(Radius.circular(5.0)),
            ),
            padding: const EdgeInsets.all(5),
            child: isConnected
                ? const Text(
                    'Connected to AWS',
                    key: ValueKey('AWSconnect'),
                    style: TextStyle(
                        fontSize: 10,
                        color: Colors.green,
                        fontWeight: FontWeight.bold),
                  )
                : const Text(
                    'Not Connected',
                    key: ValueKey('AWSdisconnect'),
                    style: TextStyle(
                        fontSize: 10,
                        color: Colors.red,
                        fontWeight: FontWeight.bold),
                  ),
          )
...
